# tinyrenderer

./: CMakeLists.txt  output.tga
includes/: config.h  drawing.h  model.h  tr_math.h
src/: drawing.cpp  main.cpp  model.cpp
